--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -88,7 +88,8 @@
       "smsRu": "SMS.Ru",
       "fastapi": "FastAPI",
       "sqlalchemy": "SQLAlchemy",
-      "recharts": "Recharts"
+      "recharts": "Recharts",
+      "openai": "OpenAI API (ProxyAPI/OpenRouter)"
     },
     "flowShop": {
       "title": "Flow — E-commerce Store",
@@ -118,6 +119,16 @@
         "categories": "Service categories",
         "integrations": "Integrations",
         "reminders": "SMS reminders"
+      }
+    },
+    "activeRealtyBot": {
+      "title": "Active Group Realty — LLM Bot",
+      "short": "Telegram bot for real estate consultations with GPT: menu for rent, buy/sell, analytics, documents, free dialogue, disclaimers, feedback 👍/👎, specialist escalation, admin panel with CSV export.",
+      "role": "Full-stack developer",
+      "metrics": {
+        "menuItems": "Menu sections",
+        "dbTables": "DB tables",
+        "escalations": "Specialist escalations per day"
       }
     },
     "financeManager": {
