--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -88,7 +88,8 @@
       "smsRu": "SMS.Ru",
       "fastapi": "FastAPI",
       "sqlalchemy": "SQLAlchemy",
-      "recharts": "Recharts"
+      "recharts": "Recharts",
+      "openai": "OpenAI API (ProxyAPI/OpenRouter)"
     },
     "flowShop": {
       "title": "Flow — Интернет-магазин",
@@ -118,6 +119,16 @@
         "categories": "Категорий услуг",
         "integrations": "Интеграций",
         "reminders": "Напоминаний (SMS)"
+      }
+    },
+    "activeRealtyBot": {
+      "title": "Active Group Realty — бот с LLM",
+      "short": "Telegram-бот для консультаций по недвижимости с GPT: меню по аренде, покупке/продаже, аналитике, документам, свободный диалог, дисклеймеры, обратная связь 👍/👎, эскалация к специалисту, админ-панель с экспортом в CSV.",
+      "role": "Full-stack разработчик",
+      "metrics": {
+        "menuItems": "Разделов меню",
+        "dbTables": "Таблиц в БД",
+        "escalations": "Эскалаций к специалисту (в день)"
       }
     },
     "financeManager": {
