--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -150,6 +150,16 @@
         "newsPerDay": "Новостей в день",
         "screens": "Экранов"
       }
+    },
+    "storiesBot": {
+      "title": "Хранитель историй — анонимный сбор историй",
+      "short": "Telegram-бот для анонимного приёма личных историй: пошаговый сценарий FSM, анонимизация данных (телефоны, email, ссылки), отправка модераторам в группу с топиками, меню с правилами и PDF-документами. Проект «Миллион нерассказанных историй».",
+      "role": "Full-stack разработчик",
+      "metrics": {
+        "steps": "Шагов в сценарии",
+        "anonymizedTypes": "Типов анонимизации",
+        "pdfDocs": "PDF-документов"
+      }
     }
   }
 }
